Examples/bad/parse/while.lifp
// (while Element Element)

(while)
(while a)
(while way too much)
